<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.thkoeln.jmoeller.autonomoustangobot.activities.newexplorationactivities.NewExplorationActivity">

    <TextView
        android:id="@+id/textView_newExploration_explanation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/textView_newExploration_explanation_text"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/start_new_exploration_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_newExploration_explanation"
        android:layout_centerInParent="true"
        android:layout_marginTop="64dp"
        android:onClick="onClickStartNewExploration"
        android:text="@string/start_new_exploration_text"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_new_exploration_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:onClick="onClickSettings"
        android:text="@string/title_activity_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</RelativeLayout>
